crates/omni-types/tests/compile_fail/cannot_pass_nodeid_as_modelid.rs
//! Asserts the reverse direction of `cannot_pass_modelid_as_nodeid`:
//! a `NodeId` cannot be passed where a `ModelId` is expected.

fn requires_model_id(_m: omni_types::ModelId) {}

fn main() {
    let node = omni_types::NodeId::from_attestation_hash([0u8; 32]);
    // ERROR: expected `ModelId`, found `NodeId`.
    requires_model_id(node);
}
