crates/omni-types/tests/compile_fail/cannot_pass_nodeid_as_modelid.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/cannot_pass_nodeid_as_modelid.rs:9:23
  |
9 |     requires_model_id(node);
  |     ----------------- ^^^^ expected `ModelId`, found `NodeId`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> tests/compile_fail/cannot_pass_nodeid_as_modelid.rs:4:4
  |
4 | fn requires_model_id(_m: omni_types::ModelId) {}
  |    ^^^^^^^^^^^^^^^^^ -----------------------
